Adds the ability to retrive all admins
